[package]
name = "orbit-state-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "orbit CLI — files-canonical agent substrate"

[[bin]]
name = "orbit"
path = "src/main.rs"

[[bin]]
name = "orbit-migrate"
path = "src/bin/migrate.rs"

[dependencies]
orbit-state-core.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile.workspace = true
